fix: spacing

--- a/apps/web/emr/src/styles/Home.module.css
+++ b/apps/web/emr/src/styles/Home.module.css
@@ -30,7 +30,7 @@
 .description p {
   position: relative;
   margin: 0;
-  padding: 1rem;
+  padding: 0;
 }
 
 .code {
